Don't push histograms to browser after every page load when persistence is enabled.

BUG=630503
TBR=thestig@chromium.org

Review-Url: https://codereview.chromium.org/2231843002
Cr-Commit-Position: refs/heads/master@{#411079}

Former-commit-id: a7742715fad96d7358b74df6b183b62765a15e63